--- a/example.env
+++ b/example.env
@@ -5,3 +5,6 @@ DB_USER = user name
 DB_PASSWORD = password
 # Database url
 DB_URI = cluster name
+
+# For update user email you should crate serviceAccountKey.json file
+serviceAccountKey.json
